<resources>
    <string name="app_name">InseadQR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="check_in">Check-In</string>
    <string name="check_out">Check Out</string>
    <string name="check_order_status">Check your orders</string>
    <string name="enter_your_table_number">Enter your table number</string>
    <string name="please_enter_table_number">Please enter table number</string>
    <string name="check_in_progress">Check In Progress…</string>
    <string name="check_out_in_progress">Check Out In Progress…</string>
    <string name="check_in_fragment">Check In Fragment</string>
    <string name="generating_qr_code_wait_for_print">Generating QR Code\nPlease wait for the print…</string>
    <string name="check_in_complete">Check In Successful</string>
    <string name="check_your_orders">Check your orders</string>
    <string name="fetching_outstanding_orders">Fetching unpaid orders</string>
    <string name="select_your_orders_to_pay">Select your orders to pay</string>
    <string name="payment_successful">Payment Successful</string>
    <string name="select_your_tables">Select your table</string>
    <string name="unpaid_orders_exist_for_this_table">Unpaid orders exist for this table</string>
    <string name="no_unpaid_orders">There are no unpaid orders for this table</string>
    <string name="settings">Settings</string>
    <string name="cloud_server_url">Cloud URL</string>
    <string name="please_input_server_url">Please enter cloud URL</string>
    <string name="client_id">Client ID</string>
    <string name="client_secret">Client Secret</string>
    <string name="save">Save Settings</string>
    <string name="server_url_empty">Cloud URL cannot be empty</string>
    <string name="please_input_client_id">Please input client id</string>
    <string name="please_input_client_secret">Please input client secret</string>
    <string name="client_id_empty">Client Id cannot be empty</string>
    <string name="client_secret_empty">Client secret cannot be empty</string>
    <string name="settings_saved">Settings Saved</string>
    <string name="available">Available</string>
    <string name="occupied">Occupied</string>
</resources>