<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_tables"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/table_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc"
        app:spanCount="5"
        tools:itemCount="10"
        tools:listitem="@layout/item_table" />

    <View
        android:id="@+id/view1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:background="@drawable/round_border"
        app:layout_constraintBottom_toTopOf="@id/btn_check_in"
        app:layout_constraintEnd_toStartOf="@id/txt_available"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/table_list" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/available"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@id/view2"
        app:layout_constraintStart_toEndOf="@id/view1"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <View
        android:id="@+id/view2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/round_border_custom_disabled"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@id/txt_occupied"
        app:layout_constraintStart_toEndOf="@id/txt_available"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_occupied"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/occupied"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view2"
        app:layout_constraintTop_toTopOf="@id/view2" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_shape_btn"
        android:padding="50dp"
        android:text="@string/check_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_check_out"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_shape_btn"
        android:padding="50dp"
        android:text="@string/check_out"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_check_order_status"
        app:layout_constraintStart_toEndOf="@id/btn_check_in" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_check_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_shape_btn"
        android:padding="50dp"
        android:text="@string/check_order_status"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_check_out"
        app:layout_constraintTop_toTopOf="@id/btn_check_out" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_settings1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>